 * Modified phpmailer AddAddress in email sending to allow for multiple to recipients.
 * Modified project user adding to use a multi-select list box.
 * Modified get_enum_string to use the g_ enum string value instead of the s_ enum string value.
 * Modified br tags to be new xml style tags.
 * Modified time stats in summary to use CLOSED instead of resolved.
 * Added Hungarian translation.
 * Added Japanese translation.
 * Added Czech translation.
 * Added g_bug_link_tag to let users customize how to create bug links.
 * Added a "jump to bugnotes" quicklink at the top of the view bug pages.
 * Added a global option to control what access levels can delete bugs.
 * Added g_bug_move_access_level to control what access level can move bugs to other projects.
 * Added extra link after a bug report to go directly to the new bug.
 * Added g_close_bug_threshold for closing a bug.
 * Added print report link to view all bug page.
 * Added g_allowed_files and g_disallowed_files to control what files types may be uploaded.
 * Added user to project multi-select listbox in manage section.
 * Added list of projects  a user is assigned to to the account page.
 * Added print bug view.
 * Added jump to bug form.
 * Removed access_min and access threshold concepts from the user and project management.
 * Removed extra "echo" in news archive page.
 * Removed proj_user_delete_page.php.
 * Removed dependency on s_ enum strings.  Use g_ enum strings instead.
 * Updated Copyright to 2002.
 * Added $g_use_javascript to default/config_inc1.php (SC)

03.15.2002  -   0.17.1

 * Fixed missing closing span tag in view_bug_*page.php.
 * Fixed advanced summaries (jpgraph) for general statistics for all projects.
 * Fixed small problem in all localization files (for $s_reset_request_msg).
 * Fixed summary stats for developers when they are assigned with "developer" rights at a project and do not have default profile >="developer".